fix josh spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -318,8 +318,6 @@ img[src="svg/deliverables.svg"], img[src="svg/tools.svg"]{
 
 .overview-outer {
   background-color: #EFEEEC;
-  padding-top: 5rem;
-  padding-bottom: 5rem;
 }
 
 img[src="images/product-detail-womens.png"] {
@@ -955,8 +953,14 @@ img[src="images/bag-desktop-1.png"], img[src="images/bag-desktop-2.png"], img[sr
   color: white;
 }
 
+.overview {
+  align-items: center;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 img[src="svg/logo-iterations-josh.svg"] {
-  width: 100%;
+  width: 60%;
   padding-bottom: 2rem;
   height: auto;
   margin: auto;
@@ -982,6 +986,10 @@ img[src="svg/logo-iterations-josh.svg"] {
   list-style-position: inside;
 }
 
+.josh-list > li {
+  font-weight: bold;
+}
+
 .comp-analysis-josh-inner, .feedback-josh-inner {
   width: 90%;
   margin: auto;
@@ -991,8 +999,13 @@ img[src="svg/logo-iterations-josh.svg"] {
   background-color: #E3E3E3;
 }
 
-.feedback-josh-inner {
+.logo-journey-josh-inner {
   padding-top: 5rem;
+}
+
+.feedback-josh-inner {
+  padding-top: 3rem;
+  padding-bottom: 5rem;.over
 }
 
 .feedback-josh-inner > p {
@@ -1008,7 +1021,7 @@ img[src="svg/logo-iterations-josh.svg"] {
 }
 
 .type-josh-outer {
-  padding-top: 5rem;
+  padding-top: 3rem;
   margin: auto;
 }
 
@@ -1026,29 +1039,32 @@ img[src="svg/logo-iterations-josh.svg"] {
 }
 
 img[src="svg/logo-iterations-josh2.svg"] {
-  width: 70%;
+  width: 30%;
   height: auto;
   margin: auto;
   padding-top: 1rem;
 }
 
 .final-josh {
-  /* padding-top: 5rem;
-  padding-bottom: 5rem; */
   background-color: #313131;
+}
+
+.final-josh-inner {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .josh-light-logo {
   /* background-color: white; */
 }
 
-.final-josh-1 > p {
+/* .final-josh-1 > p {
   color: white;
 }
 
 .final-josh-1 > h2 {
   color: white;
-}
+} */
 
 .final-josh-2 > p {
   color: white;
@@ -1572,10 +1588,10 @@ img[src="images/group-together.png"] {
   padding-top: 0rem;
 }
 
-.roles, .deliverables {
+/* .roles, .deliverables {
   padding-top: 0rem;
   border-right: 1px solid black;
-}
+} */
 
 .tools {
   padding-top: 0rem;
@@ -2118,6 +2134,11 @@ img[src="images/landing-page-new1-3.png"], img[src="images/dash-add-new.png"], i
 /*// Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) {
 
+  .roles, .deliverables {
+    padding-top: 0rem;
+    border-right: 1px solid black;
+  }
+
   img[src="images/josh_lacoste_mobile.png"] {
     width: 60%;
     padding-top: 0rem;
@@ -2596,11 +2617,16 @@ img[src="images/landing-page-new1-3.png"], img[src="images/dash-add-new.png"], i
 
   /*Project.html*/
   .roles1, .introduction, .competitive-analysis1, .user-survey, .user-personas, .stories1, .user-flows1, .sketches-1, .branding1, .testing, .final-product1, .conclusion, .bio-text, .splash-inner, .overview, .user-data-inner, .mkt-personas-inner, .competitors, .user-stories-inner, .wireframes-mkt-inner, .user1, .user2,
-   .user-name-new, .user-name-new2, .branding-mkt-inner, .user-testing-mkt-inner, .visual-design-mkt-inner, .splash-josh-inner, .overview-top-josh,.overview-inner-josh,.overview-top-josh,.overview-inner-josh, .logo-journey-josh-inner,.comp-analysis-josh-inner, .feedback-josh-inner, .type-josh, .final-josh-inner, .final-josh-inner2, .testing-mkt-inner, .conclusion-mkt-inner, .intro {
+   .user-name-new, .user-name-new2, .branding-mkt-inner, .user-testing-mkt-inner, .visual-design-mkt-inner, .splash-josh-inner, .overview-top-josh,.overview-inner-josh,.overview-top-josh,.overview-inner-josh,.comp-analysis-josh-inner, .feedback-josh-inner, .type-josh, .final-josh-inner, .final-josh-inner2, .testing-mkt-inner, .conclusion-mkt-inner, .intro {
     padding-top: 6rem;
     padding-bottom: 6rem;
     width: 85%;
   }
+
+.logo-journey-josh-inner {
+  padding-top: 6rem;
+  width: 85%;
+}
 
   .user-personas-mkt {
     width: 85%;
